# check_disk_size

./: Cargo.toml  READMD.md
src/: main.rs
